feat: Spring Security + JWT 인증 구현 완료 (Phase 5)
- JwtUtil 클래스 구현 (토큰 생성/검증/추출)
- JwtAuthenticationFilter 구현 (요청마다 토큰 검증)
- SecurityConfig 설정 (인증/인가 규칙)
- 회원가입/로그인 비밀번호 암호화 (BCrypt)
- 로그인 시 JWT 토큰 발급
- 다이어리 API userId 필터링 추가
- 본인 다이어리만 조회/수정/삭제 가능